# PublicTransportSimulation

./: CMakeLists.txt  dane.txt  main.cpp
classes/: Kolejka.cpp  Kolejka.h  Linia.cpp  Linia.h  Miejsce.cpp  Miejsce.h  Osoba.cpp  Osoba.h  Pojazd.cpp  Pojazd.h  Przystanek.cpp  Przystanek.h  Spektakl.cpp  Spektakl.h  Symulacja.cpp  Symulacja.h  Trasa.cpp  Trasa.h  Zdarzenie.cpp  Zdarzenie.h
